# max-mamba

./: .gitignore  LICENSE  README.md  pyproject.toml
src/max_mamba/: __init__.py  config.py  model.py  ops.py
src/max_mamba/layers/: __init__.py  block.py  cache.py  conv.py  mixer.py  rmsnorm.py
tests/: conftest.py  test_block.py  test_cache.py  test_clamp.py  test_conv.py  test_mixer.py  test_model.py  test_pad.py  test_rmsnorm_gated.py  test_roll.py  test_tile.py
